--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Title:</strong>
-  <%= @post.title %>
+  <%= raw @post.title %>
 </p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
